--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,21 @@
-* {
+*{
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-body {
-    background-color: #131720;
-    font-family: sans-serif;
+body{
+    background-color: black;
 }
-
 h3 {
     color: white;
 }
 
 .topnav {
     overflow: hidden;
-    background-color: #131720;
+    background-color: black;
     padding: 10px;
+    display: block;
 }
 
 .topnav a {
@@ -51,14 +52,14 @@ input {
 }
 
 .thumbnail {
-    height: 350px;
-    width: 300px;
+    height: 300px;
+    width: 200px;
     border-radius: 19px;
 }
 
 .column {
     float: left;
-    width: 25%;
+    width: 20%;
     padding: 10px 10px;
 }
 
@@ -66,5 +67,51 @@ input {
     border-radius: 19px;
     padding: 15px;
     text-align: center;
-    background-color: #151f30;
+    background-color: darkslategrey;
+}
+
+.card:hover{
+    border-radius: 19px;
+    padding: 15px;
+    text-align: center;
+    background-color: darkslategrey;
+    transform: scale(1.2);
+}
+
+/* Toggle */
+
+.mode{
+    float: right;
+    padding: 15px 5px 0px 10px;
+}
+#toggle{
+    position: relative;
+    display: block;
+    width: 32px;
+    height: 16px;
+    border-radius: 16px;
+    background-color: grey;
+    transition: 0.5s;
+    cursor: pointer;
+}
+#toggle .indicator{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 16px;
+    height: 16px;
+    background-color: black;
+    border-radius: 50%;
+    transform: scale(0.9);
+    transition: 0.5s;
+}
+#toggle.active .indicator{
+    left: 16px;
+    background-color: brown;
+}
+body.active{
+    background-color: white;
+}
+#toggle.active{
+    background-color: antiquewhite;
 }
